--- a/.parcelrc
+++ b/.parcelrc
@@ -2,6 +2,7 @@
     "extends": "@parcel/config-default",
     "transformers": {
         "*.glb": ["@parcel/transformer-raw"],
-        "*.hdr": ["@parcel/transformer-raw"]
+        "*.hdr": ["@parcel/transformer-raw"],
+        "*.msh": ["@parcel/transformer-raw"]
     }
 }
