--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "@parcel/transformer-glsl": "^2.9.3",
+    "@parcel/transformer-inline-string": "^2.12.0",
     "@parcel/transformer-sass": "^2.9.3",
     "parcel": "^2.9.3"
   },
