--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "@tweakpane/plugin-essentials": "^0.2.1",
     "three": "^0.172.0",
-    "tweakpane": "^4.0.5"
+    "tweakpane": "^4.0.5",
+    "tweakpane-plugin-infodump": "^4.0.2"
   },
   "devDependencies": {
     "@parcel/transformer-glsl": "^2.9.3",
