--- a/package.json
+++ b/package.json
@@ -1,27 +1,25 @@
 {
-  "name": "softbody",
+  "name": "softbodies",
+  "private": true,
   "version": "0.0.1",
-  "description": "",
-  "browserslist": "> 0.5%, last 2 versions, not dead",
+  "type": "module",
   "scripts": {
-    "start": "parcel src/index.html --open",
-    "build": "parcel build src/index.html --public-url ./"
+    "dev": "vite",
+    "build": "vite build --mode=production",
+    "preview": "vite preview"
+  },
+  "devDependencies": {
+    "vite": "^6.3.1",
+    "vite-plugin-tsl-operator": "^1.2.3",
+    "@babel/parser": "^7.26.9",
+    "@babel/traverse": "^7.26.9",
+    "@babel/generator": "^7.26.9",
+    "@babel/types": "^7.26.9"
   },
   "dependencies": {
     "@tweakpane/plugin-essentials": "^0.2.1",
     "three": "^0.175.0",
     "tweakpane": "^4.0.5",
     "tweakpane-plugin-infodump": "^4.0.2"
-  },
-  "devDependencies": {
-    "@parcel/transformer-glsl": "^2.9.3",
-    "@parcel/transformer-inline-string": "^2.12.0",
-    "@parcel/transformer-sass": "^2.9.3",
-    "parcel": "^2.9.3"
-  },
-  "keywords": [],
-  "alias": {
-    "three/webgpu": "three/src/Three.WebGPU.js",
-    "three/tsl": "three/src/Three.TSL.js"
   }
 }
