--- a/package.json
+++ b/package.json
@@ -9,16 +9,16 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "vite": "^6.3.1",
-    "vite-plugin-tsl-operator": "^1.2.3",
+    "@babel/generator": "^7.26.9",
     "@babel/parser": "^7.26.9",
     "@babel/traverse": "^7.26.9",
-    "@babel/generator": "^7.26.9",
-    "@babel/types": "^7.26.9"
+    "@babel/types": "^7.26.9",
+    "vite": "^6.3.1",
+    "vite-plugin-tsl-operator": "^1.2.3"
   },
   "dependencies": {
     "@tweakpane/plugin-essentials": "^0.2.1",
-    "three": "^0.175.0",
+    "three": "^0.176.0",
     "tweakpane": "^4.0.5",
     "tweakpane-plugin-infodump": "^4.0.2"
   }
