--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@tweakpane/plugin-essentials": "^0.2.1",
+    "is-mobile": "^5.0.0",
     "three": "^0.176.0",
     "tweakpane": "^4.0.5",
     "tweakpane-plugin-infodump": "^4.0.2"
